--- a/Codebook.Rmd
+++ b/Codebook.Rmd
@@ -61,66 +61,125 @@ Following are the specifications for each single variables:
 
 "tBodyGyroJerkMag-mean()": continuos, mean of means (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body angular jerks
 
+"fBodyAcc-mean()-X": continuos, mean of means (each of ones for a certain time window) of body accelerations frequency along the orizontal axis
 
-"fBodyAcc-mean()-X"
-"fBodyAcc-mean()-Y"
-"fBodyAcc-mean()-Z"
-"fBodyAcc-meanFreq()-X"
-"fBodyAcc-meanFreq()-Y"
-"fBodyAcc-meanFreq()-Z"
-"fBodyAccJerk-mean()-X"
-"fBodyAccJerk-mean()-Y"
-"fBodyAccJerk-mean()-Z"
-"fBodyAccJerk-meanFreq()-X"
-"fBodyAccJerk-meanFreq()-Y"
-"fBodyAccJerk-meanFreq()-Z"
-"fBodyGyro-mean()-X"
-"fBodyGyro-mean()-Y"
-"fBodyGyro-mean()-Z"
-"fBodyGyro-meanFreq()-X"
-"fBodyGyro-meanFreq()-Y"
-"fBodyGyro-meanFreq()-Z"
-"fBodyAccMag-mean()"
-"fBodyAccMag-meanFreq()"
-"fBodyBodyAccJerkMag-mean()"
-"fBodyBodyAccJerkMag-meanFreq()"
-"fBodyBodyGyroMag-mean()"
-"fBodyBodyGyroMag-meanFreq()"
-"fBodyBodyGyroJerkMag-mean()"
-"fBodyBodyGyroJerkMag-meanFreq()"
-"tBodyAcc-std()-X"
-"tBodyAcc-std()-Y"
-"tBodyAcc-std()-Z"
-"tGravityAcc-std()-X"
-"tGravityAcc-std()-Y"
-"tGravityAcc-std()-Z"
-"tBodyAccJerk-std()-X"
-"tBodyAccJerk-std()-Y"
-"tBodyAccJerk-std()-Z"
-"tBodyGyro-std()-X"
-"tBodyGyro-std()-Y"
-"tBodyGyro-std()-Z"
-"tBodyGyroJerk-std()-X"
-"tBodyGyroJerk-std()-Y"
-"tBodyGyroJerk-std()-Z"
-"tBodyAccMag-std()"
-"tGravityAccMag-std()"
-"tBodyAccJerkMag-std()"
-"tBodyGyroMag-std()"
-"tBodyGyroJerkMag-std()"
-"fBodyAcc-std()-X"
-"fBodyAcc-std()-Y"
-"fBodyAcc-std()-Z"
-"fBodyAccJerk-std()-X"
-"fBodyAccJerk-std()-Y"
-"fBodyAccJerk-std()-Z"
-"fBodyGyro-std()-X"
-"fBodyGyro-std()-Y"
-"fBodyGyro-std()-Z"
-"fBodyAccMag-std()"
-"fBodyBodyAccJerkMag-std()"
-"fBodyBodyGyroMag-std()"
-"fBodyBodyGyroJerkMag-std()"
+"fBodyAcc-mean()-Y": continuos, mean of means (each of ones for a certain time window) of body accelerations frequency along the vertical axis
+
+"fBodyAcc-mean()-Z": continuos, mean of means (each of ones for a certain time window) of body accelerations frequency along the anteroposterior axis
+
+"fBodyAcc-meanFreq()-X": continuos, mean of means (each of ones for a certain time window) of body accelerations frequency of frequencies along the orizontal axis
+
+"fBodyAcc-meanFreq()-Y": continuos, mean of means (each of ones for a certain time window) of body accelerations frequency of frequencies along the vertical axis
+
+"fBodyAcc-meanFreq()-Z": continuos, mean of means (each of ones for a certain time window) of body accelerations frequency of frequencies along the anteroposterior axis
+
+"fBodyAccJerk-mean()-X": continuos, mean of means (each of ones for a certain time window) of body accelerations jerks frequency along the orizontal axis
+
+"fBodyAccJerk-mean()-Y": continuos, mean of means (each of ones for a certain time window) of body accelerations jerks frequency along the vertical axis
+
+"fBodyAccJerk-mean()-Z": continuos, mean of means (each of ones for a certain time window) of body accelerations jerks frequency along the anteroposterior axis
+
+"fBodyAccJerk-meanFreq()-X": continuos, mean of means (each of ones for a certain time window) of body accelerations jerks frequency of frequencies along the orizontal axis
+
+"fBodyAccJerk-meanFreq()-Y": continuos, mean of means (each of ones for a certain time window) of body accelerations jerks frequency of frequencies along the vertical axis
+
+"fBodyAccJerk-meanFreq()-Z": continuos, mean of means (each of ones for a certain time window) of body accelerations jerks frequency of frequencies along the anteroposterior axis
+
+"fBodyGyro-mean()-X": continuos, mean of means (each of ones for a certain time window) of body angular velocity frequency along the orizontal axis
+
+"fBodyGyro-mean()-Y": continuos, mean of means (each of ones for a certain time window) of body angular velocity frequency along the vertical axis
+
+"fBodyGyro-mean()-Z": continuos, mean of means (each of ones for a certain time window) of body angular velocity frequency along the anteroposterior axis
+
+"fBodyGyro-meanFreq()-X": continuos, mean of means (each of ones for a certain time window) of body angular velocity frequency of frequencies along the orizontal axis
+
+"fBodyGyro-meanFreq()-Y": continuos, mean of means (each of ones for a certain time window) of body angular velocity frequency of frequencies along the vertical axis
+
+"fBodyGyro-meanFreq()-Z" continuos, mean of means (each of ones for a certain time window) of body angular velocity frequency of frequencies along the anteroposterior axis
+
+"fBodyAccMag-mean()": continuos, mean of means (each of ones for a certain time window) of the magnitude of the three-dimensional signals of body acceleration frequency
+
+"fBodyAccMag-meanFreq()": continuos, mean of means (each of ones for a certain time window) of the magnitude of the three-dimensional signals of body acceleration frequency of frequencies
+
+"fBodyBodyAccJerkMag-mean()": continuos, mean of means (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body jerks acceleration frequency
+
+"fBodyBodyAccJerkMag-meanFreq()": continuos, mean of means (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body jerks acceleration frequency of frequencies
+
+"fBodyBodyGyroMag-mean()": continuos, mean of means (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body angular velocity frequency
+
+"fBodyBodyGyroMag-meanFreq()": continuos, mean of means (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body angular velocity frequency of frequencies
+
+"fBodyBodyGyroJerkMag-mean()": continuos, mean of means (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body angular jerks frequency
+
+"fBodyBodyGyroJerkMag-meanFreq()": continuos, mean of means (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body angular jerks frequency of frequencies
+
+"tBodyAcc-std()-X": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations along the orizontal axis
+
+"tBodyAcc-std()-Y": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations along the vertical axis
+
+"tBodyAcc-std()-Z": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations along the anteroposterior axis
+
+"tGravityAcc-std()-X": continuos, mean of standard deviations (each of ones for a certain time window) of gravitational component accelerations along the orizontal axis 
+"tGravityAcc-std()-Y": continuos, mean of standard deviations (each of ones for a certain time window) of gravitational component accelerations along the vertical axis
+
+"tGravityAcc-std()-Z": continuos, mean of standard deviations (each of ones for a certain time window) of gravitational component accelerations along the vertical axis
+
+"tBodyAccJerk-std()-X": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations jerks along the orizontal axis
+
+"tBodyAccJerk-std()-Y": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations jerks along the vertical axis
+
+"tBodyAccJerk-std()-Z": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations jerks along the anteroposterior axis
+
+"tBodyGyro-std()-X": continuos, mean of standard deviations (each of ones for a certain time window) of body angular velocity along the orizontal axis
+
+"tBodyGyro-std()-Y": continuos, mean of standard deviations (each of ones for a certain time window) of body angular velocity along the vertical axis
+
+"tBodyGyro-std()-Z": continuos, mean of standard deviations (each of ones for a certain time window) of body angular velocity along the anteroposterior axis
+
+"tBodyGyroJerk-std()-X": continuos, mean of standard deviations (each of ones for a certain time window) of body angular jerks along the orizontal axis
+
+"tBodyGyroJerk-std()-Y": continuos, mean of standard deviations (each of ones for a certain time window) of body angular jerks along the vertical axis
+
+"tBodyGyroJerk-std()-Z": continuos, mean of standard deviations (each of ones for a certain time window) of body angular jerks along the anteroposterior axis
+
+"tBodyAccMag-std()": continuos, mean of standard deviations (each of ones for a certain time window) of the magnitude of the three-dimensional signals of body acceleration
+
+"tGravityAccMag-std()": continuos, mean of standard deviations (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the gravitational components acceleration
+
+"tBodyAccJerkMag-std()": continuos, mean of standard deviations (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body jerks acceleration
+
+"tBodyGyroMag-std()": continuos, mean of standard deviations (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body angular velocity
+
+"tBodyGyroJerkMag-std()": continuos, mean of means (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body angular jerks
+
+"fBodyAcc-std()-X": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations frequency along the orizontal axis
+
+"fBodyAcc-std()-Y": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations frequency along the vertical axis
+
+"fBodyAcc-std()-Z": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations frequency along the anteroposterior axis
+
+"fBodyAccJerk-std()-X": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations jerks frequency along the orizontal axis
+
+"fBodyAccJerk-std()-Y": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations jerks frequency along the vertical axis
+
+"fBodyAccJerk-std()-Z": continuos, mean of standard deviations (each of ones for a certain time window) of body accelerations jerks frequency along the anteroposterior axis
+
+"fBodyGyro-std()-X":continuos, mean of standard deviations (each of ones for a certain time window) of body angular velocity along the orizontal axis 
+
+"fBodyGyro-std()-Y": continuos, mean of standard deviations (each of ones for a certain time window) of body angular velocity along the vertical axis 
+
+"fBodyGyro-std()-Z": continuos, mean of standard deviations (each of ones for a certain time window) of body angular velocity along the anteroposterior axis 
+
+"fBodyAccMag-std()": continuos, mean of standard deviations (each of ones for a certain time window) of the magnitude of the three-dimensional signals of body acceleration frequency
+
+"fBodyBodyAccJerkMag-std()": continuos, mean of standard deviations (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body jerks acceleration frequency
+
+"fBodyBodyGyroMag-std()": continuos, mean of standard deviations (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body angular velocity frequency
+
+"fBodyBodyGyroJerkMag-std()": continuos, mean of standard deviations (each of ones for a certain time window) of the magnitude of the three-dimensional signals of the body angular jerks frequency
+
+
+ 
 
 
 
